# gitwatch-rs

./: .dockerignore  .gitignore  .release-plz.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  flake.nix  justfile
.github/: dependabot.yml
.github/workflows/: build.yml  coverage.yml  lint.yml  publish.yml  release.yml  test.yml
docs/: commit-message-script.example.sh  gitwatch.1  gitwatch.example.yaml
example/: README.md  gitwatch-commit-message.sh  gitwatch-prompt.md  gitwatch.example.yaml  gitwatch.sh  gitwatch.yaml  notes.org
nix/: devshell.nix  service.nix
nix/modules/: rust.nix
pkg/arch/: .SRCINFO  PKGBUILD  PKGBUILD.j2  generate-pkgbuild.sh
pkg/nix/: devshell.nix  package.nix
src/: app.rs  app_config.rs  cli.rs  commit_message.rs  config_file.rs  filter.rs  lib.rs  logger.rs  main.rs  repo.rs  util.rs  watcher.rs
tests/: integration_tests.rs
tests/support/: app_runner.rs  constants.rs  mod.rs  test_repo.rs
xtask/: Cargo.toml
xtask/src/: main.rs
