[package]
name = "gitwatch-rs"
version = "0.1.1"
authors = ["jan.moeller0@pm.me"]
repository = "https://github.com/croissong/gitwatch-rs"
keywords = ["git", "autocommit"]
license-file = "LICENSE"
readme = "README.md"
description = "CLI to watch a git repo and automatically commit changes"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
auth-git2 = "0.5.8"
clap = { version = "4.5.42", features = ["derive"] }
clap_complete = "4.5.55"
fern = { version = "0.7.1", features = ["colored"] }
figment = { version = "0.10.19", features = ["env", "yaml"] }
git2 = "0.20.2"
ignore = "0.4.23"
indoc = "2.0.6"
log = "0.4.27"
notify-debouncer-full = "0.5.0"
paris = { version = "1.5", features = ["macros", "no_logger"] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1.0"
shellexpand = "3.1.1"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
rand = "0.9.2"
tempfile = "3.20.0"
testresult = "0.4.1"

[lib]
name = "gitwatch_rs"
path = "src/lib.rs"

[[bin]]
name = "gitwatch"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
